--- a/JS(18072022)/calculator.css
+++ b/JS(18072022)/calculator.css
@@ -44,4 +44,5 @@ button{
     border-radius: 10px;
     background-color:crimson;
     color: white;
+    box-shadow: 0px 2px 5px 0px white inset;
 }
