--- a/JS(18072022)/calculator.css
+++ b/JS(18072022)/calculator.css
@@ -19,6 +19,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
+    background-color:crimson;
 }
 input{
     padding: 20px 0px;
