--- a/JS(20072022)/Google/Google.css
+++ b/JS(20072022)/Google/Google.css
@@ -111,3 +111,9 @@ select , option{
     color: red;
     font-size: 12px;
 }
+.black{
+    font: bold;
+    color: black;
+    font-size: 20px;
+    padding: 0px 0px 25px 0px;
+}
