--- a/JS(22072022)/styles/medical.css
+++ b/JS(22072022)/styles/medical.css
@@ -122,7 +122,7 @@ main {
 
 .blue-ul {
   color: #006792;
-  font-weight: bolder;
+  font-weight: 900;
   font-size: larger;
   padding: 30px 0px 60px; }
 
@@ -206,7 +206,7 @@ main {
 
 .blue-ul2 {
   color: #007fb9;
-  font-weight: bolder;
+  font-weight: 900;
   font-size: larger;
   padding: 0px 0px 12px; }
 
