--- a/JS(22072022)/SCSS/_main.scss
+++ b/JS(22072022)/SCSS/_main.scss
@@ -51,7 +51,7 @@ main{
 }
 .blue-ul{
     color: #006792;
-    font-weight:bolder;
+    font-weight:900 ;
     font-size: larger;
     padding: 30px 0px 60px;
 }
@@ -142,7 +142,7 @@ main{
 }
 .blue-ul2{
     color: #007fb9;
-    font-weight: bolder;
+    font-weight: 900;
     font-size: larger;
     padding: 0px 0px 12px;
 
