--- a/JQ(02082022)/intro.css
+++ b/JQ(02082022)/intro.css
@@ -19,6 +19,7 @@
     background-color:#00095b;
     border-radius: 25px;
     box-shadow: 0px 0px 10px 2px grey;
+    cursor: pointer;
 }
 .show-bronco, .show-truck, .show-mustang{
     display: none;
