--- a/JQ(02082022)/intro.css
+++ b/JQ(02082022)/intro.css
@@ -14,14 +14,16 @@
     color:#00095b;
     font-weight:bold ;
 }
-.nav:hover{
+.show-truck, .show-mustang{
+    display: none;
+}
+
+.hover{
     color: white;
     background-color:#00095b;
     border-radius: 25px;
     box-shadow: 0px 0px 10px 2px grey;
+}
+.nav:hover{
     cursor: pointer;
 }
-.show-bronco, .show-truck, .show-mustang{
-    display: none;
-}
-
