--- a/ES(08082022)/sliderimhg.css
+++ b/ES(08082022)/sliderimhg.css
@@ -4,6 +4,7 @@
     height: 400px;
     text-align: center;
     font-size: 100px;
+    width: 100%;
  }
  .buttons{
    padding: 30px 30%;
@@ -15,6 +16,8 @@
     border: none;
     margin: 50px 20px;
     font-size: x-large;
+    box-shadow: 0px 0px 1px 1px grey;
+    border-radius: 5px;
  }
  button:hover{
     background-color: red;
