--- a/ES(19082022)/slider.css
+++ b/ES(19082022)/slider.css
@@ -21,21 +21,14 @@
     transition: all 1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     position: absolute;
   }
-  .slider [class*="box"]:nth-child(1) {
+  .slider [class*="box"]:nth-child(1) , .slider [class*="box"]:nth-child(3){
     width: 100%;
     height: 180%;
     transform: scale(0.2) translate(-50%, -50%);
     top: -24%;
     z-index: 1;
   }
- .container{
-    width: 100%;
-    height: 285%;
-    transform: scale(0.2) translate(-50%, -50%);
-    top: -65%;
-    z-index: 1;
-  }
-  .slider [class*="box"]:nth-child(2) {
+   .slider [class*="box"]:nth-child(2) {
     width: 100%;
     height: 100%;
     transform: scale(0.4) translate(-50%, -50%);
